<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2013 C. A. Fitzgerald

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0
  
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. 
-->
<resources>

    <string name="app_name">MAL For Android</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="loading">Loading&#8230;</string>
    <string name="login_error_title">Login failed</string>
    <string name="login_error_invalid_combo">Invalid user and password combination</string>
    <string name="login_error_unknown_issue">Unknown server error. Please try again later</string>
    <string name="login_error_no_creds">Please enter both a username and a password</string>
    <string name="watched_status_watching">Watching</string>
    <string name="watched_status_compleated">Completed</string>
    <string name="watched_status_onhold">On-Hold</string>
    <string name="watched_status_dropped">Dropped</string>
    <string name="watched_status_plan">Plan to Watch</string>
    <string name="placard_text">Select an item for details</string>
    <string name="all">All</string>
    <string name="read_status_watching">Reading</string>
	<string name="read_status_plan">Plan to Read</string>
	<string name="plus_one">+1</string>
    <string name="add_as">Add as:</string>
    <string name="add">Add</string>
    <string name="statistics">Statistics</string>
	<string name="information">Information</string>
	<string name="status">Status:</string>
	<string name="watched">Watched:</string>
	<string name="chapters">Chapters:</string>
	<string name="volumes">Volumes:</string>
	<string name="your_score">Your Score:</string>
	<string name="refresh_list">Refresh List</string>
	<string name="search">Search</string>
	<string name="not_in_list">Not in your list</string>
	<string name="remove_anime">Remove Anime</string>
	<string name="remove_manga">Remove Manga</string>
	<string name="later">Remind Me Later</string>
	<string name="app_rate_title">App Rating</string>
	<string name="app_rate_message">Please consider rating MAL For Android.</string>
	<string name="complete_question_title">Complete?</string>
	<string name="complete_question_msg">It looks as if you\'ve completed this item.\nShould this be moved to completed now?</string>
	<string name="open_in_browser">Open in browser</string>
	
	<string name="watched_format">Watching: %1$d/%2$d</string>
    <string name="chapter_format">Chapters: %1$d/%2$d</string>
    <string name="volume_format">Volumes: %1$d/%2$d</string>
    <string name="read_format">chap: %1$d/%2$d vol: %3$d/%4$d</string>
    <string name="prequel_format">Prequels: %1$d</string>
    <string name="sequel_format">Sequels: %1$d</string>
    <string name="side_story_format">Side Stories: %1$d</string>
    <string name="spin_off_format">Spin Offs: %1$d</string>
    <string name="related_format">Related: %1$d</string>
    <string name="summaries_format">Summaries: %1$d</string>
    <string name="type_format">Type: %1$s</string>
    <string name="status_format">Status: %1$s</string>
    <string name="classification_format">Classification %1$s</string>
    <string name="rank_format">Rank: %1$d</string>
    <string name="popularity_format">Popularity: %1$d</string>
    <string name="members_score_format">Member Score: %1$.2f</string>
    <string name="members_count_format">Member Count: %1$d</string>
    <string name="favorited_count_format">Favorited: %1$d</string>
    <string name="alternative_versions_format">Alternates: %1$d</string>
    <string name="manga_adaptations_format">Manga: %1$d</string>
    <string name="anime_adaptations_format">Anime: %1$d</string>
    <string name="score_format">Score: %1$d</string>

    <string-array name="anime_status_options">
        <item>Watching</item>
        <item>Completed</item>
        <item>On-Hold</item>
        <item>Dropped</item>
        <item>Plan to Watch</item>
    </string-array>
    
    <string-array name="manga_status_options">
        <item>Reading</item>
        <item>Completed</item>
        <item>On-Hold</item>
        <item>Dropped</item>
        <item>Plan to Read</item>
    </string-array>
    
    <string-array name="anime_score_options">
        <item>Select</item>
        <item>(10) Masterpiece</item>
        <item>(9) Great</item>
        <item>(8) Very Good</item>
        <item>(7) Good</item>
        <item>(6) Fine</item>
        <item>(5) Average</item>
        <item>(4) Bad</item>
        <item>(3) Very Bad</item>
        <item>(2) Horrible</item>
        <item>(1) Appalling</item>
    </string-array>
    
    <string-array name="drop_down_nav_options">
        <item>Anime</item>
        <item>Manga</item>
    </string-array>

</resources>