<?xml version="1.0" encoding="utf-8"?>
<!--
 Copyright 2013 C. A. Fitzgerald

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0
  
 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License. 
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.github.riotopsys.malforandroid2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ellipsize="end"
        android:maxLines="2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/title" >

        <com.github.riotopsys.pannellayout.PannelLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="4dp"
            app:columns="6"
            app:divider_size="4dp" >

            <ImageView
                android:id="@+id/cover_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:scaleType="centerCrop"
                android:src="@drawable/icon"
                app:column_span="1"
                app:row_span="4" />

            <ScrollView
                android:id="@+id/synopsis_container"
                style="@style/detail_item"
                app:column_span="3"
                app:row_span="4" >

                <TextView
                    android:id="@+id/synopsis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ipsum" />
            </ScrollView>

            <LinearLayout
                android:id="@+id/watched_panel"
                style="@style/detail_item"
                android:gravity="center"
                android:visibility="gone"
                app:column_span="1" >

                <TextView
                    android:id="@+id/watched_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/watched"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/plus_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/plus_one" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/status_panel"
                style="@style/detail_item"
                android:visibility="gone"
                app:column_span="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/status"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/anime_watched_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/score_panel"
                style="@style/detail_item"
                android:visibility="gone"
                app:column_span="1" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/your_score"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/anime_score_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:spinnerMode="dialog"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/add_panel"
                style="@style/detail_item"
                android:gravity="center"
                android:visibility="gone"
                android:weightSum="5"
                app:column_span="5" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/add_as"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/anime_watched_status_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:spinnerMode="dialog"
                    tools:listitem="@android:layout/simple_spinner_dropdown_item" />

                <Button
                    android:id="@+id/add_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:text="@string/add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/information_container"
                style="@style/detail_item"
                android:orientation="vertical"
                android:visibility="gone"
                app:column_span="1"
                app:row_span="2" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    android:text="@string/information"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                     />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    />

                <TextView
                    android:id="@+id/classification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/statistics_container"
                style="@style/detail_item"
                android:orientation="vertical"
                android:visibility="gone"
                app:column_span="1"
                app:row_span="2" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    android:text="@string/statistics"
                    android:textStyle="bold" 
                    />

                <TextView
                    android:id="@+id/rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    />

                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    />

                <TextView
                    android:id="@+id/member_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    />

                <TextView
                    android:id="@+id/member_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    />

                <TextView
                    android:id="@+id/favorited_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:layout_marginBottom="4dp"
                    />
            </LinearLayout>

            <TextView
                android:id="@+id/prequel"
                style="@style/detail_item"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:column_span="1" />

            <TextView
                android:id="@+id/sequel"
                style="@style/detail_item"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:column_span="1" />

            <TextView
                android:id="@+id/side_story"
                style="@style/detail_item"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:column_span="1" />

            <TextView
                android:id="@+id/spin_offs"
                style="@style/detail_item"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:column_span="1" />

            <TextView
                android:id="@+id/summaries"
                style="@style/detail_item"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:column_span="1" />

            <TextView
                android:id="@+id/alternative_versions"
                style="@style/detail_item"
                android:gravity="center"
                android:textStyle="bold"
                android:visibility="gone"
                app:column_span="1" />
        </com.github.riotopsys.pannellayout.PannelLayout>
    </ScrollView>

</RelativeLayout>